# CoordChemPy

./: .gitignore  Fe_CN64m.xyz  Fe_CO5.xyz  Fe_NH363p.xyz  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: app.py
data/: ligands.json
notebook/: coordchem.html  coordchem.ipynb  test.ipynb
notebook/assets/: complex.cif  complex.xyz
src/: __init__.py  coordchem.py  main.py  stability.py
src/coordchempy/: __init__.py  coordchem.py  stability.py
src/coordchempy/data/: counter_ions.json  ligands.json  metals.json
tests/: optional_test_stability.py  stab.py  stability_results.csv  test.py  test_analysis.py  test_stability.py
