[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CoordChemPy"
version = "0.1.1"
description = "The essential Python toolkit for inorganic chemistry students and researchers."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Miguel Sousa", email = "miguel.sousaduarte@epfl.ch" }
]
license = "MIT"

dependencies = [
    "numpy",
    "py3Dmol",
    "roman",
    "ase",
    "streamlit",
]

[project.optional-dependencies]
test = [
    "pytest",
    "ruff",
    "ipython",
]

[project.urls]
"Homepage" = "https://github.com/Miguelsd24/ppchem"

[tool.setuptools]
package-dir = {"" = "src"}
# Indique à setuptools d'inclure automatiquement les fichiers non-python trouvés dans package-data
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Associe correctement le dossier data à ton package source 'coordchempy'
coordchempy = ["data/*.json"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
